@@ -1,0 +1,12 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.linegraphing;
+
+/**
+ * Constants used through this sim.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class LGConstants {
+
+    public static final int CONTROL_FONT_SIZE = 18;
+}
