@@ -1,11 +1,17 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.linegraphing.intro.model;
 
+import edu.colorado.phet.common.phetcommon.model.Resettable;
+
 /**
  * Model for the "Intro" module.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public class IntroModel {
+public class IntroModel implements Resettable {
     //TODO
+
+    public void reset() {
+        //TODO
+    }
 }
