@@ -1,8 +1,14 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.linegraphing.intro.view;
 
+import java.awt.Color;
+import java.awt.Frame;
+
+import edu.colorado.phet.common.piccolophet.nodes.ResetAllButtonNode;
+import edu.colorado.phet.linegraphing.LGConstants;
 import edu.colorado.phet.linegraphing.common.view.LGCanvas;
 import edu.colorado.phet.linegraphing.intro.model.IntroModel;
+import edu.umd.cs.piccolo.PNode;
 
 /**
  * Canvas for the "Intro" module.
@@ -12,6 +18,24 @@ import edu.colorado.phet.linegraphing.intro.model.IntroModel;
 public class IntroCanvas extends LGCanvas {
 
     public IntroCanvas( IntroModel model ) {
-        //TODO
+
+        PNode resetAllButtonNode = new ResetAllButtonNode( model, null, LGConstants.CONTROL_FONT_SIZE, Color.BLACK, Color.ORANGE ) {{
+            setConfirmationEnabled( false );
+        }};
+
+        // rendering order
+        {
+            addChild( resetAllButtonNode );
+        }
+
+        // layout
+        {
+            // NOTE: Nodes that have corresponding model elements handle their own offsets.
+            final double xMargin = 20;
+            final double yMargin = 20;
+            // lower right
+            resetAllButtonNode.setOffset( getStageSize().getWidth() - resetAllButtonNode.getFullBoundsReference().getWidth() - xMargin,
+                                          getStageSize().getHeight() - resetAllButtonNode.getFullBoundsReference().getHeight() - yMargin );
+        }
     }
 }
